@@ -28,6 +28,7 @@
 * Fixed missing break in switch.
 * Added comparable score to Benchmark.
 * Added a vector proxy class forwarding to Eigen.
+* Replaced all arithmetic by assignment vector operations.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
